# ds-cli

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  noxfile.py  pyproject.toml
.github/workflows/: release.yml  test-pypi.yml  tests.yml
src/ds_cli/: __init__.py  console.py  dscli.py  styles.py
src/ds_cli/commands/: hello.py
src/ds_helper/: styles.py
src/ds_reify/: __init__.py  dsreify.py
src/ds_reify/commands/: init.py
src/ds_reify/utils/: prompt.py
src/dscli/: dscli.py
src/tests/: conftest.py  test_dscli.py  test_hello.py  test_main.py
tests/: conftest.py  test_hello.py  test_init.py  test_main.py
