[tool.poetry]
name = "ds-cli"
version = "0.1.0"
description = "A CLI helper for [Distributed-Something](https://github.com/DistributedScience/Distributed-Something)"
authors = ["Nodar Gogoberidze <gnodar01@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://distributedscience.github.io/Distributed-Something/introduction.html"
repository = "https://github.com/gnodar01/ds-cli"
keywords = ["Distributed-Something", "DistributedScience"]
#packages = [{include = "ds_cli"}]

[tool.poetry.dependencies]
python = "^3.8"
rich-click = "^1.6.1"

[tool.poetry.dev-dependencies]


[tool.poetry.scripts]
dscli = "ds_cli.dscli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

